# tongfang-utility

./: .eslintrc.js  .gitignore  .lintstagedrc.json  .prettierrc  .travis.yml  LICENSE  README-en.md  README.md  appveyor.yml  build-mac.sh  build-win.js  colorUtils.js  commitlint.config.js  index.html  main.js  package-lock.json  package.json  pnpm-lock.yaml  start-dev.sh  tsconfig.json
.github/workflows/: release.yml
public/: index.html
scripts/vite/: vite.config.js
scripts/webpack/: webpack.common.config.js  webpack.dev.config.js  webpack.prod.config.js
src/: index.tsx  router.ts  style.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: build.rs  main.rs
src-tauri/src/cmd/: mod.rs
src-tauri/src/fileutil/: mod.rs
src-tauri/src/hid/: mod.rs
src-tauri/src/imageutil/: mod.rs
src-tauri/src/macserial/: UserPseudoRandom.h  macserial.c  macserial.h  mod.rs  modelinfo.h  modelinfo_autogen.h  platform_data.rs  types.rs
src-tauri/src/network/: mod.rs
src-tauri/src/resource/: cpu.rs  disk.rs  exec.rs  memory.rs  mod.rs
src-tauri/src/smc/: battery.rs  mod.rs  smc.c  smc.h
src-tauri/src/ziputil/: mod.rs
src/actions/: counter.ts
src/common/: appconfig.ts
src/reducers/: appReducer.ts  index.ts
src/resources/: boot-args-preset.ts
src/sagas/: counterSaga.ts  index.ts
src/services/: check-compatibility.ts  clear-local-drivers.ts  collect-syslog.ts  fan-control-curve.ts  generate-sn-and-mlb.ts  get-build-yaml-info.ts  get-efi-releases.ts  get-local-drivers.ts  get-model-name-by-sn.ts  get-os-version.ts  get-remote-drivers.ts  get-smbios-info.ts  get-wmic-info.ts  process-efi.tsx  toolkit-services.ts  voltage-shift.ts
src/stores/: app-store.ts  config-store.ts  dashboard-store.ts  fan-store.ts  index.ts  root-store.ts  ui-store.ts  update-store.ts  user-store.ts
src/types/: css-module.d.ts  (+6 more)
starbeat-client/: app.icns  index.js  package-lock.json  package-windows.json  package.json
starbeat-core/: package-lock.json  package.json
views/: index-en.html  index.html
(+249 files in other folders)
