[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }
cc = "1.0"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["dialog-open", "fs-all", "os-all", "path-all", "shell-execute", "window-all"] }
libc = "0.2"
image = { version = "0.23", default-features = false, features = ["png"] }
png = "0.16"
itertools = "*"
color-thief = "0.2"
zip = "0.5"
reqwest = { version = "0.11.4", features = ["stream"] }
futures-util = "0.3.17"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
